# filament-box-shelves

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  parts.py  pyproject.toml  rev_history.txt
.github/workflows/: ci.yml
